# starlette-admin-litestar-plugin

./: .envrc  .icon  .pre-commit-config.yaml  CHANGELOG.md  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: bumpversion.yml
examples/: advanced_alchemy.py  basic.py
starlette_admin_litestar_plugin/: __init__.py
starlette_admin_litestar_plugin/ext/: advanced_alchemy.py
